--- a/website/templates/admin/groups/new_group.html
+++ b/website/templates/admin/groups/new_group.html
@@ -19,29 +19,27 @@
                 <div class='form_div'>
 					<table class = "tableS">
 						<form method='POST'>
-							<div class='query'>
-								<th>
-									<label for="groupCode">Group Code:</label>
+							<tr>
+								<th class ="sep_fifty" >
+									<labelfor="groupCode">Group Code:</label>
 								</th>
-								<th class = "no_border">
+								<th colspan = "3" class = "no_border">
 									<span>
 										<input type='text' id='groupCode' name='groupCode' value ="{{ current_id }}" disabled>
 									</span>
 								</th>
-							</div>
-							<tr></tr>
-							<div class='query'>
+							</tr>								
+							<tr>
 								<th>
 									<label for="groupName">Group Name:</label>
 								</th>
 								<th class = "no_border">
-								<span>
-									<input type='text' id='groupName' name='groupName'>
-								</span>
+									<span>
+										<input type='text' id='groupName' name='groupName'>
+									</span>
 								</th>
-							</div>
-							<tr></tr>	
-							<div class='query'>
+							</tr>
+							<tr>								
 								<th>
 									<label for="projectTitle">Project Title:</label>
 								</th>
@@ -50,9 +48,8 @@
 										<textarea class="min_txt_size" id='projectTitle' name='projectTitle' required></textarea>
 									</span>
 								</th>
-							</div>
-							<tr></tr>
-							<div class='query'>
+							</tr>
+							<tr>
 								<th>
 									<label for="program">Program:</label>
 								</th>
@@ -68,9 +65,8 @@
 										</select>
 									</span>
 								</th>
-							</div>
-							<tr></tr>							
-							<div id="cont">
+							</tr>									
+							<tr>
 								<td colspan = "2">
 									<table>
 										<tr>
@@ -89,11 +85,12 @@
 										{% endfor %}
 									</table>
 								</td>
-							</div>
-							<tr></tr>	
-							<th class = "no_border" colspan = "2">
-								<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
-							</th>
+							</tr>	
+							<tr>
+								<th class = "no_border" colspan = "2">
+									<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
+								</th>
+							</tr>
 						</form>
 					</table>		
                 </div>
