--- a/website/templates/admin/sheettab/edit_sheet.html
+++ b/website/templates/admin/sheettab/edit_sheet.html
@@ -74,28 +74,49 @@ Gradesheets
 
 
 
-    <div class='display_grid'>
+     <div class='display_grid'>
         {% if templates %}
             {% for template in templates %}
-                <div class='box'>
-                    <p>ID: {{ template.id }}</p>
-                    <p>Gradesheet Type: {{ template.sheet_type }}</p>
-                    <p>Rubrics:</p>
-                    <ul>
-                        {% for rubric in template.rubric %}
-                            <li>{{ rubric.desc }}</li>
-                        {% endfor %}
-                    </ul>
-                    <a href="/view_sheet/{{ template.id }}">
-                        <button>View</button>
-                    </a>
-
-                    <a href="">
-                        <button>Edit</button>
-                    </a>
-                    <a href="">
-                        <button>Delete</button>
-                    </a>
+                <div class='div1'>
+					<table>
+						<tr>
+							<th class = "tb_desc">ID:</th> 
+							<td  colspan = "2">{{ template.id }}</td>
+						</tr>
+						<tr>
+							<th>Gradesheet Type:</th> 
+							<td colspan = "2">{{ template.sheet_type }}</td>
+						</tr>
+						<tr>
+						<th colspan = "3">Rubrics:</th>
+						</tr>
+						<ul>
+							{% for rubric in template.rubric %}
+								<tr>
+									<td colspan = "3">{{ rubric.desc }}</td>
+								</tr>
+							{% endfor %}
+						</ul>
+					</table>
+					<table class = "no_border">
+						<td class = "no_border sep_20">
+						<td class = "no_border sep_20">
+						<th class = "no_border">
+							<a href="/view_sheet/{{ template.id }}">
+								<button class = "but2">View</button>
+							</a>
+						</th>
+						<th class = "no_border">
+							<a href="/edit_sheet/{{ template.id }}">
+								<button class = "but2">Edit</button>
+							</a>
+						</th>
+						<th class = "no_border">
+							<a href="/delete_sheet/{{ template.id }}">
+								<button class = "but2">Delete</button>
+							</a>
+						</th>
+					</table>
                 </div>
             {% endfor %}
         {% endif %}
