--- a/website/static/admin/new_style.css
+++ b/website/static/admin/new_style.css
@@ -190,11 +190,10 @@ input {
 	
     position: absolute;
     flex-direction: column;
-    width: 30%;
+	max-width:40%;
     min-height: 0;
-	max-height: 80%;
+	max-height: 95%;
     background-color: white;
-    overflow-y: hidden;
     overflow-y: auto;
 }
 
@@ -279,6 +278,10 @@ table{
 .tableM{
 	width: 300px;
 	align-items: center;
+}
+
+.tableL{
+	width: 700px
 }
 
 th{
