--- a/website/templates/admin/groups/edit_group.html
+++ b/website/templates/admin/groups/edit_group.html
@@ -24,7 +24,7 @@
 								</th>
 								<th class ="no_border">
 									<span>
-										<input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
+										<input class = "dropdown_fill" type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
 									</span>
 								</th>
 							</tr>
@@ -34,7 +34,7 @@
 								</th>
 								<th class = "no_border">
 									<span>
-										<input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'>
+										<input class = "dropdown_fill" type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'>
 									</span>
 								</th>
 							</tr>	
@@ -44,7 +44,7 @@
 								</th>
 								<th class = "no_border">
 									<span>
-										<textarea class="min_txt_size" id='projectTitle' name='projectTitle' required>{{ to_edit.project_title }}</textarea>
+										<textarea class="dropdown_fill min_txt_size" id='projectTitle' name='projectTitle' required>{{ to_edit.project_title }}</textarea>
 									</span>
 								</th>
 							</tr>				
@@ -54,7 +54,7 @@
 								</th>
 								<th class = "no_border">
 									<span>
-										<select name="program" id='program'>
+										<select class = "dropdown_fill" name="program" id='program'>
 											<option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
 											<option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
 											<option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
@@ -71,7 +71,7 @@
 								</th>
 								<th class = "no_border">
 									<span>
-										<select name="mentor" id='mentor'>
+										<select class = "dropdown_fill" name="mentor" id='mentor'>
 											{% for mentor in mentors %}
 												<option value='{{ mentor.id }}' {% if to_edit.mentor_id == mentor.id %}selected {% endif %}>{{ mentor.last_name}}, {{ mentor.first_name }}</option>
 											{% endfor %}
@@ -81,7 +81,7 @@
 							</tr>
 							<tr>
 								<th colspan = "2" class = "no_border">
-									<button id='submit' name='submit'>Submit</button>
+									<button class = "but2" id='submit' name='submit'>Submit</button>
 								</th>
 							</tr>
 						</table>
