--- a/website/templates/admin/groups/new_group.html
+++ b/website/templates/admin/groups/new_group.html
@@ -33,9 +33,9 @@
 								<th>
 									<label for="groupName">Group Name:</label>
 								</th>
-								<th class = "no_border">
+								<th colspan = "3" class = "no_border">
 									<span>
-										<input type='text' id='groupName' name='groupName'>
+										<input class = "dropdown_fill" type='text' id='groupName' name='groupName'>
 									</span>
 								</th>
 							</tr>
@@ -43,7 +43,7 @@
 								<th>
 									<label for="projectTitle">Project Title:</label>
 								</th>
-								<th class ="no_border">
+								<th colspan = "3" class ="no_border">
 									<span>
 										<textarea class="min_txt_size" id='projectTitle' name='projectTitle' required></textarea>
 									</span>
@@ -53,7 +53,7 @@
 								<th>
 									<label for="program">Program:</label>
 								</th>
-								<th class ="no_border">
+								<th colspan = "3" class ="no_border">
 									<span>
 										<select class = "dropdown_fill" name="program" id='program'>
 											<option value='BSIT-AGD'>BSIT-AGD</option>
@@ -65,10 +65,8 @@
 										</select>
 									</span>
 								</th>
-							</tr>									
-							<tr>
-								<td colspan = "2">
-									<table>
+							</tr>
+								<td colspan = "4">
 										<tr>
 											<th>Student Number</th>
 											<th>Last Name</th>
@@ -83,11 +81,10 @@
 											<td><input type='text' name='stud_mid{{ x }}'></td>
 										</tr>
 										{% endfor %}
-									</table>
+									
 								</td>
-							</tr>	
 							<tr>
-								<th class = "no_border" colspan = "2">
+								<th  class = "no_border" colspan = "4">
 									<button class = "but2" type='submit' id='submit' name='submit'>Submit</button>
 								</th>
 							</tr>
