--- a/website/templates/user/base_user.html
+++ b/website/templates/user/base_user.html
@@ -1,98 +1,50 @@
-<html>
+<body>
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel='stylesheet' href="{{ url_for('static', filename ='user/user.css') }}">
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/new_style.css') }}">
         <title>{% block title %}{% endblock %}</title>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     </head>
-    <script>
-        $(function() {
-            // Sidebar toggle behavior
-            $('#sidebarCollapse').on('click', function() {
-                $('#sidebar, #content').toggleClass('active');
-            });
-        });
+    <nav>
+        <div class="top">
+            <div class="pic_div">
+                <img src="{{ url_for('static', filename ='img_avatar.png') }}" alt="..." width="65" class="profile_pic">
+            </div>
+            <div class="profile_info">
+                <p class="username">{{ user.first_name }} {{ user.last_name }}</p>
+                <p class="position">Panelist</p>
+            </div>
+        </div>
 
-        $(document).ready(function(){
-            var path = window.location.pathname;
-            var target = $('li a[href="' + path + '"]')
-            console.log(window.location.pathname)
-            console.log(target)
-            target.addClass('active')
-        });
-    </script>
+        <div class="bottom">
+            <a href="/user_home/" name='home' class="">Dashboard</a>
+            <a href="/user_groups/" name='groups' class="">Groups</a>
+            <a href="/user_panelists/" name='panelist' class="">Panelists</a>
+            <a href="/user_students/" name='student' class="">Students</a>
+            <a href="/logout/" class="">Logout</a>
+        </div>
+    </nav>
 
-    <style>
-        table { width: 100%; }
-        table, th, td { border: solid 1px #DDD;
-            border-collapse: collapse; padding: 2px 3px; text-align: center;
-        }
-
-        .active {
-            background-color:#dbdbdb;
-        }
-
-        .active:hover {
-            box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
-        }
-    </style>
-
-    <body>
-        <!-- Vertical navbar -->
-        <div class="vertical-nav bg-white" id="sidebar">
-            <div class="py-4 px-3 mb-4 bg-light">
-                <div class="media d-flex align-items-center"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556074849/avatar-1_tcnd60.png" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
-                    <div class="media-body">
-                        <h4 class="m-0">{{ user.first_name}} {{ user.last_name }}</h4>
-                        <p class="font-weight-light text-muted mb-0">Panelist</p>
-                    </div>
-                </div>
+    <main>
+        <div class='top_bar'>
+            <div class='page_title'>
+                <h1>{% block pagename %}{% endblock %}</h1>
+            </div>
+            <div class='search_part'>
+                <input type="text" name="search" placeholder="Search...">
+            </div>
+            <div class='create_button'>
+                {% block button %}
+                {% endblock %}
             </div>
 
-            <ul class="nav flex-column bg-white mb-0">
-                <li class="nav-item">
-                    <!-- bg-light shows the selected -->
-                    <a href="/user_home/" class="nav-link text-dark font-italic">
-                        <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Dashboard
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/user_groups/" class="nav-link text-dark font-italic">
-                        <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/user_panelists/" class="nav-link text-dark font-italic">
-                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/user_students/" class="nav-link text-dark font-italic">
-                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="/logout/" class="nav-link text-danger font-italic">
-                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Logout
-                    </a>
-                </li>
-            </ul>
         </div>
-        <!-- End vertical navbar -->
-
-
-        <!-- Page content holder -->
         
-        <div class="page-content p-5" id="content">
-            <!-- Toggle button -->
+        {% block overlay %}
+        {% endblock %}  
+
+        <div class='content'>
             {% block content %}
             {% endblock %}
-        
         </div>
-        <!-- End demo content -->
-        
-        
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
-</html>
+    </main>
+</body>
