--- a/website/templates/user/groups_u.html
+++ b/website/templates/user/groups_u.html
@@ -1,41 +1,78 @@
-{% extends 'base_user.html' %}
+{% extends "base_user.html" %}
 {% block title %}Home Page{% endblock %}
-{% block functions %}
+{% block pagename %}
+    Groups
 {% endblock %}
-
+{% block button %}
+<a href="/new_group/">
+    <button>Create New Group</button>
+</a>
+{% endblock %}
 {% block content %}
-	<head>
-        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/menu_sheet.css') }}">
-	</head>
+	<style>
+        .container {
+            width: fit-content;
+            height: fit-content;
+        }
+        textarea {
+            height: 30px;
+            width: 100%;
+            transition: all 0.5s ease;
+        }
+
+        textarea:focus {
+            height: 5em;
+        }
+    </style>
     <div class='display_grid'>
         {% if groups %}
             {% for group in groups %}
                 <div class='div1'>
 					<table>
-						<th class = "tb_desc">ID:</th> 
-						<td>{{group.id}}</td>
+							<th class = "tb_desc ">ID:</th> 
+							<td>{{group.id}}</td>
 						<tr>
-						<th>Group Name:</th> 
-						<td>{{group.name}}</td>
+							<th class = "tb_desc">Group Name:</th> 
+							<td>{{group.name}}</td>
+						</tr>
 						<tr>
-						<th>Project Title:</th> 
-						<td>{{ group.project_title }}</td>
+							<th class = "tb_desc">Project Title:</th>
+							<td>{{ group.project_title }}</td>
+						</tr>
 						<tr>
-						<th>Program:</th> 
-						<td>{{group.program}}</td>
+							<th class = "tb_desc">Program:</th> 
+							<td>{{group.program}}</td>
+						</tr>
 						<tr>
-						<th colspan = "2">Members:</th>
+							<th class = "tb_desc">Mentor:</th> 
+							<td>{{ group.mentor.last_name }}, {{ group.mentor.first_name }}</td>
+						</tr>
 						<tr>
-						{% for member in group.members %}
-							<th> Student no.{{ member.stud_no }} </th>
-							<td> {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</td>
-							<tr>
-						{% endfor%}
-					</table>
+							<th colspan = "2">Members:</th>
+						</tr>
+						<tr>
+							<ul>
+								{% for member in group.members %}
+									
+									<th class = "no_border"> Student No. #{{ member.stud_no }}</th>
+									<td> {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</td>
+									<tr>
+								{% endfor%}
+							</ul>
+						</tr>
+						
+						<th colspan = "2">Defenses:</th>
+						<tr>
+						<ul>
+							{% for defense in group.defenses %}
+								<td colspan = "2">{{ defense.id }} - {{ defense.start_date }} </td>
+								<tr>
+							{% endfor%}
+						</ul>
+                    </table>
                 </div>
             {% endfor %}
         {% endif %}
     </div>
 {% endblock %}
-
 
