--- a/website/templates/admin/students/edit_student.html
+++ b/website/templates/admin/students/edit_student.html
@@ -17,7 +17,7 @@
             <div class='content_div'>
                 <form method='POST'>
                     <div class='form_div'>
-						<table class = "tableS">
+						<table class = "tableL">
 							<div class='query'>
 								<th>
 									<label for="userCode">Student No.:</label>
