--- a/website/templates/admin/students/delete_student.html
+++ b/website/templates/admin/students/delete_student.html
@@ -4,20 +4,26 @@
 	<link rel='stylesheet' href="{{ url_for('static', filename ='admin/delete_style.css') }}">
 </head>
     <div id="overlay">
-		<div id="text">
-			<table class="sml_tbl">
-				<th colspan = "2" class = "no_border">Are you sure?</th>
-				<tr>
-					<form method='POST'>
-					<th class = "no_border">
-						<button id='submit' name='submit' value='yes'>Yes</button>
-					</th>
-					<th class = "no_border">
-						<button id='submit' name='submit' values='no'>No</button>
-					</th>
-				</form>
-				</tr>
-			</table>
+		<div class='container2'>
+            <div class='header_div'>
+				<div id="text">
+					<div>
+						<table class = "sml_tbl">
+						<th colspan = "2" class = "no_border">Are you sure?</th>
+						</th>
+						<tr>
+						<form method='POST'>
+							<th class = "no_border">
+								<button id='submit' name='submit' value='yes'>Yes</button>
+							</th>
+							<th class = "no_border">
+								<button id='submit' name='submit' values='no'>No</button>
+							</th>
+						</form>
+						</table>
+					</div>
+				</div>
+			</div>
 		</div>
     </div>
 {% endblock %}
