Updated user gradesheets

--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -85,7 +85,7 @@
 								</a>
 							</td>
 							<td>
-								<a href="/assign_/Group/{{ defense.id }}">
+								<a href="/assign_sheet/Group/{{ defense.id }}">
 									<button>Assign Group Gradesheet</button>
 								</a>
 							</td>
