--- a/website/templates/admin/gradesheet/group_sheet.html
+++ b/website/templates/admin/gradesheet/group_sheet.html
@@ -1,7 +1,6 @@
 <html>
 	<head>
-		
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
         <title>{% block title %}{% endblock %}</title>
 	</head>
 	<style>
