--- a/website/templates/user/grading/group_sheet.html
+++ b/website/templates/user/grading/group_sheet.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-        <link rel='stylesheet' href="indiv_sheet.css">
-		
+        <link rel='stylesheet' href="{{ url_for('static', filename ='user/indiv_sheet.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='admin/indiv_sheet.css') }}">
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
 	</head>
@@ -12,16 +12,18 @@
 
 	</style>
 	<body>
-		{% set x = 0 %}
+		<div class="topnav">
+			<a class="" href="/user_home">Back</a>
+			<a href="/grading/indiv/{{ defense.id }}">Individual</a>
+			<a class='active' href="">Group</a>
+			<a href="/grading/comment/{{ defense.id }}">Comment</a>
+		</div>
 		<form method='POST'>
-			<div class="topnav">
-				<a class="active" href="#back">Back</a>
-				<a href="#indiv">Individual</a>
-				<a href="#grp">Group</a>
-				<a href="#cmt">Comment</a>
-				<p class='temp_id'>Template ID: {{ template.id }}</p>
-			</div>
 			<div class="parent">
+				<div class="div23 empty_spc">
+				</div>
+				<div class="div23two empty_spc right_align"> 
+				</div>
 				<div class="div1"> 
 					<h1>FEU ALABANG</h1>
 				</div>
@@ -30,87 +32,133 @@
 					<title_font1><br>GROUP GRADE SHEET</title_font1>
 				</div>
 				<div class="div3"> 
-					<table>
-						<td class="left_gborder gray_bg">GROUP NAME:</td>
-						<td class="" colspan = "3">G R O U P D E T A I L S</td>
-						<tr>
-						<td class="left_gborder gray_bg">PROJECT TITLE:</td>
-						<td class=""colspan = "3" >P R O J E C T D E T A I L S</td>
-						<tr>
-						<td class=" left_gborder gray_bg " rowspan ="2">ORAL DEFENSE: <br> SCHEDULE: </td>
-						<td class=" gray_bg ">DATE:</td>
-						<td class=" gray_bg">TIME:</td>
-						<td class=" gray_bg ">ROOMS:</td>
-						<tr>
-						<td class="">DATE DETAILS</td>
-						<td class="">TIME DETAILS</td>
-						<td class="">ROOMS DETAILS</td>
-					</table>
-					
+					<details_font>GROUP NAME:</details_font>
 				</div>
 				<div class="div4"> 
-					<table>
-						<th colspan = "4">PROPONENT NAME(LN,FN, MI.)</th>
-						<tr>
-						<td class="left_gborder gray_bg">PROPONENT 1:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<td class="left_gborder gray_bg">PROPONENT 2:</td>
-						<td>PROPONENT D E T A I L S</td>
-						<tr class="">
-						<td class="left_gborder gray_bg">PROPONENT 3:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<td class="left_gborder gray_bg">PROPONENT 4:</td>
-						<td class="">PROPONENT D E T A I L S</td>
-						<tr>
-					</table>
-			
+					<details_font>{{ defense.group.name }}</details_font>
 				</div>
-				<div class = "div5">
+				<div class="div5"> 
+					<details_font>PROJECT TITLE:</details_font>
+				</div>
+				<div class="div6"> 
+					<details_font>{{ defense.group.project_title }}</details_font>
+				</div>
+				<div class="div7"> 
+					<details_font>ORAL DEFENSE:</details_font><br>
+					<details_font>SCHEDULE:</details_font>
+				</div>
+				<div class="div8"> 
+					<details_font>DATE:</details_font>
+				</div>
+				<div class="div9"> 
+					<details_font>TIME:</details_font> 
+				</div>
+				<div class="div10"> 
+				<details_font>ROOMS:</details_font> 
+				</div>
+				<div class="div11"> 
+					DATE DETAILS 
+				</div>
+				<div class="div12"> 
+					TIME DETAILS
+				</div>
+				<div class="div13"> 
+					ROOM DETAILS
+				</div>
+				<div class="div14 green_bg empty_spc"> 
+					<prop_font1> PROPONENT NAME (LN, FN MI.) </prop_font1>
+				</div>
+				<div class="div15"> 
+					<details_font> PROPONENT 1: </details_font>
+				</div>
+				<div class="div16"> 
+					{% set x = 0 %}
+					{% if defense.group.members|length > x %}
+						{% set stud_name = defense.group.members[x].last_name + ', ' + defense.group.members[x].first_name + ' ' + defense.group.members[x].middle_in %}
+						{{ stud_name }}
+					{% endif %}
+					{% set x = x + 1 %}
+				</div>
+				<div class="div17"> 
+					<details_font> PROPONENT 2: </details_font>
+				</div>
+				<div class="div18"> 
+					{% if defense.group.members|length > x %}
+						{% set stud_name = defense.group.members[x].last_name + ', ' + defense.group.members[x].first_name + ' ' + defense.group.members[x].middle_in %}
+						{{ stud_name }}
+					{% endif %}
+					{% set x = x + 1 %}
+				</div>
+				<div class="div19"> 
+					<details_font> PROPONENT 3: </details_font>
+				</div>
+				<div class="div20">
+					{% if defense.group.members|length > x %}
+						{% set stud_name = defense.group.members[x].last_name + ', ' + defense.group.members[x].first_name + ' ' + defense.group.members[x].middle_in %}
+						{{ stud_name }}
+					{% endif %}
+					{% set x = x + 1 %}
+				</div>
+				<div class="div21"> 
+					<details_font> PROPONENT 4: </details_font>
+				</div>
+				<div class="div22">
+					{% if defense.group.members|length > x %}
+						{% set stud_name = defense.group.members[x].last_name + ', ' + defense.group.members[x].first_name + ' ' + defense.group.members[x].middle_in %}
+						{{ stud_name }}
+					{% endif %}
+					{% set x = x + 1 %}
+				</div>
+				<div class = "div36">
 					<table>
-						<th colspan = "7" class = "yellow_bg"> DOCUMENTATION(50) </th>
-						<tr>
-
-						<th rowspan="2">CRITERIA AND WEIGHT</th>
-						<th>5</th>
-						<th>4</th>
-						<th>3</th>
-						<th>2</th>
-						<th>1</th>
-						<th colspan="4" rowspan="2" class="yellow_bg ">STUDENT <br> INDIVIDUAL <br> GRADE</th>
-						<tr>
-							<th>VERY ACCEPTABLE</th>
-							<th>ACCEPTABLE</th>
-							<th>FAIR</th>
-							<th>NEEDS IMPROVEMENT</th>
-							<th>POOR</th>
-						</tr>
-							<th colspan = "7" class = "yellow_bg"> CHAPTER 1 </th>
-						<tr>
-						{% for rubric in rubrics %}
+						{% for category in categories %}
 							<tr>
-								<td class = "tb_title left_yborder gray_bg">
-									{{ rubric.desc }}
-									<br>
-									(x{{ rubric.weight }})
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate5 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate4 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate3 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate2 }}
-								</td>
-								<td class = "tb_desc">
-									{{ rubric.rate1 }}
-								</td>
-								{% for x in range(1, 5) %}
-									<td class = "gray_bg">
-										{{ x }} <br> <br>
+								<td colspan='8' style='color: transparent;'>Placeholder</td>
+							</tr>
+							{% if category != 'None' %}
+								<th colspan="8" class = "yellow_bg">{{ category }}</th>
+							{% else %}
+								<th colspan="8" class = "yellow_bg">Default</th>
+							{% endif %}
+							<tr></tr>
+
+							<th rowspan="2">CRITERIA AND WEIGHT</th>
+							<th>5</th>
+							<th>4</th>
+							<th>3</th>
+							<th>2</th>
+							<th>1</th>
+							<th colspan="4" rowspan="2" class="yellow_bg ">SCORE</th>
+							<tr>
+								<th>VERY ACCEPTABLE</th>
+								<th>ACCEPTABLE</th>
+								<th>FAIR</th>
+								<th>NEEDS IMPROVEMENT</th>
+								<th>POOR</th>
+							</tr>
+							{% for rubric in categories[category] %}
+								<tr>
+									<td class = "tb_title left_yborder gray_bg">
+										{{ rubric.desc }}
+										<br>
+										(x{{ rubric.weight }})
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate5 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate4 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate3 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate2 }}
+									</td>
+									<td class = "tb_desc">
+										{{ rubric.rate1 }}
+									</td>
+									<td class="gray_bg">
 										<select name="score" id="score">
 											<option value="five">5</option>
 											<option value="four">4</option>
@@ -119,11 +167,12 @@
 											<option value="One">1</option>
 										</select>
 									</td>
-								{% endfor %}
-							
-							</tr>
-						{% endfor %}	
+								</tr>
+							{% endfor %}
+						{% endfor %}
 					</table>
+
+					<br>		
 					<table class = "two" >
 						<th class="tb_jatot green_bg ">TOTAL</th>		
 						<td class=" yellow_bg ">0</td>
@@ -136,8 +185,10 @@
 						<td> 0 </td>
 					</table>
 				</div>
-				<div class="div6"> 
-					<button type="submit" class="but" id="button_inp" name="button_inp" disabled>SUBMIT</button>
+				<div class="div116 drkr_grn"> 
+					<form method='POST'>
+						<button type="submit" class="but" id="button_inp" name="button_inp">SUBMIT</button>
+					</form>		
 				</div>
 			</div>
 		</form>
