Added grading and summary functionality

--- a/website/templates/admin/schedules/schedule.html
+++ b/website/templates/admin/schedules/schedule.html
@@ -104,6 +104,16 @@
 					</table>
 					<table class = "tableButton no_border">
 						<th class = "no_border sep_10">
+							<a href="/grade_summary/{{ defense.id }}">
+								<button class = "but2" >Grade Summary</button>
+							</a>
+						</th>
+						<th class = "no_border sep_10">
+							<a href="/comment_summary/{{ defense.id }}">
+								<button class = "but2" >Comment Summary</button>
+							</a>
+						</th>
+						<th class = "no_border sep_10">
 							<a href="/edit_sched/{{ defense.id }}">
 								<button class = "but2" >Edit</button>
 							</a>
