--- a/website/templates/user/grading/comment_sheet.html
+++ b/website/templates/user/grading/comment_sheet.html
@@ -88,12 +88,12 @@
 						<th> COMMENTS SHEET </th>
 						<tr>
 						<td> 
-							<textarea class="text" id="comments_inp" name="comments_inp" style='text-align: left;'></textarea>
+							<textarea class="text" id="comments_inp" name="comments_inp" style='text-align: left;'>{{ comment }}</textarea>
 						</td>
 					</table>
 				</div>
 				<div class="div6"> 
-					<button type="submit" class="but" id="button_inp" name="button_inp" disabled>SUBMIT</button>
+					<button type="submit" class="but" id="button_inp" name="button_inp">SUBMIT</button>
 				</div>
 			</div>
 		</form>
