--- a/website/templates/user/home_u.html
+++ b/website/templates/user/home_u.html
@@ -45,7 +45,17 @@
                 <table class="tableButton no_border">
                     <th class="no_border sep_10" colspan=2>
                         <a href="/grading/indiv/{{ defense.id }}">
-                            <button class = "but2">Gradesheets</button>
+                            <button class = "but2">Individual Gradesheet</button>
+                        </a>
+                    </th>
+                    <th class="no_border sep_10" colspan=2>
+                        <a href="/grading/group/{{ defense.id }}">
+                            <button class = "but2">Group Gradesheet</button>
+                        </a>
+                    </th>
+                    <th class="no_border sep_10" colspan=2>
+                        <a href="/grading/comment/{{ defense.id }}">
+                            <button class = "but2">Comment Sheet</button>
                         </a>
                     </th>
                 </table>
