--- a/website/templates/user/grading/indiv_sheet.html
+++ b/website/templates/user/grading/indiv_sheet.html
@@ -80,7 +80,6 @@
 							{% set x = x + 1 %}
 						</tr>
 					</table>
-			
 				</div>
 				<div class = "div5">
 					<table>
@@ -121,15 +120,16 @@
 								<td class = "tb_desc">
 									{{ rubric.rate1 }}
 								</td>
-								{% for x in range(1, 5) %}
+								{% for x in range(1, defense.group.members|length + 1) %}
 									<td>
 										{{ x }} <br> <br>
-										<select name="score" id="score">
-											<option value="five">5</option>
-											<option value="four">4</option>
-											<option value="three">3</option>
-											<option value="two">2</option>
-											<option value="One">1</option>
+										<select name="score" id="category" onchange='solve(this, "{{ x }}")' required>
+											<option value="">--</option>
+											<option value="{{ rubric.id }}~{{ rubric.weight }}~5">5</option>
+											<option value="{{ rubric.id }}~{{ rubric.weight }}~4">4</option>
+											<option value="{{ rubric.id }}~{{ rubric.weight }}~3">3</option>
+											<option value="{{ rubric.id }}~{{ rubric.weight }}~2">2</option>
+											<option value="{{ rubric.id }}~{{ rubric.weight }}~1">1</option>
 										</select>
 									</td>
 								{% endfor %}
@@ -138,27 +138,48 @@
 					</table>
 					<table class = "two" >
 						<th class="tb_jatot green_bg ">TOTAL</th>
-						{% for _ in range(3) %}
-							<td class="yellow_bg ">0</td>
+						{% for x in range(1, defense.group.members|length + 1) %}
+							<td class="yellow_bg"><input type='text' id='student{{ x }}' name='student{{ x }}' value=0 onkeydown="return false">student{{ x }}</td>
 						{% endfor %}						
-						<td class=" yellow_bg ">0</td>
 					</table>
 				</div>
 				<div class="div6"> 
-					<button type="submit" class="but" id="button_inp" name="button_inp" disabled>SUBMIT</button>
+					<button type="submit" class="but" id="button_inp" name="button_inp">SUBMIT</button>
 				</div>
 			</div>
 		</form>
 		<script>
-			$(document).ready(function(){
-				$('select').on('click', function(event ) {
-					var prevValue = $(this).data('previous');
-				$('select').not(this).find('option[value="'+prevValue+'"]').show();    
-					var value = $(this).val();
-				$(this).data('previous',value); $('select').not(this).find('option[value="'+value+'"]').hide();
-				});
-			});
-		</script>a
+			var dict = {}
+			console.log('{{ defense.group.members|length }}')
+			"{% for rubric in defense.indiv_sheet.rubric %}"
+				dict['{{ rubric.id }}'] = []
+				"{% for x in range(1, defense.group.members|length + 1) %}"
+					dict['{{ rubric.id }}'].push(0)
+				"{% endfor%}"
+			"{% endfor%}"
+
+			console.log(dict)
+
+			
+			function solve(selectedObject, x) {
+				console.log(x)
+				console.log(selectedObject.value)
+				var score  = parseInt(selectedObject.value.slice(-1))
+				var weight = parseInt(selectedObject.value.slice(-3))
+				var rub_id = selectedObject.value.slice(0, -4)
+
+
+				var sum = 0
+				for (rubric in dict) {
+					if (rub_id == rubric) {
+						dict[rubric][x-1] = parseInt(score) * weight
+					}
+					sum += dict[rubric][x-1]
+					console.log(sum)
+					document.getElementById('student'+x).value = sum
+				}
+			}
+		</script>
 	</body>
 
 
